add register logic.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
@@ -22,6 +23,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
-    "mongoose": "^4.5.10"
+    "mongoose": "^4.5.10",
+    "multer": "^1.2.0"
   }
 }
