--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bower": "^1.7.9",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
